fix: resolve post page content overflow issues

--- a/src/site/components/PostPage/PostPage.module.css
+++ b/src/site/components/PostPage/PostPage.module.css
@@ -246,6 +246,15 @@
       'publications comments';
   }
 
+  .main,
+  .contentPreviews,
+  .contentSelector,
+  .attributes,
+  .comments,
+  .publications {
+    overflow-y: auto;
+  }
+
   .contentPreviews {
     justify-content: flex-start;
   }
@@ -324,6 +333,10 @@
     grid-template-areas:
       'main content publications'
       'main comments publications';
+  }
+
+  .selectedContentWrapper {
+    overflow: hidden;
   }
 
   .main,
